--- a/views/ventas.ejs
+++ b/views/ventas.ejs
@@ -82,7 +82,7 @@
                                      
                                   <div class="mb-3">
                                     <label for="Fecha_Venta" class="form-label">Ingrese la fecha de venta</label>
-                                    <input type="date" class="form-control" id="Fecha_Venta" placeholder="Ingrese la fecha" onchange="ActualizarFecha()" required/>
+                                    <input type="date" disabled class="form-control" id="Fecha_Venta" placeholder="Ingrese la fecha" onchange="ActualizarFecha()" required/>
                                     <div class="invalid-feedback">El Campo es requerido</div>
                                   </div>
 
